<resources>
    <string name="app_name">Inventory App</string>
    <string name="insert_data">Insert Data</string>
    <string name="display_data">Display Data</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_no">Supplier Phone No.</string>
    <string name="enter_supplier_name"> Enter Supplier Name</string>
    <string name="enter_supplier_phone_no">+91- Enter Supplier Phone No.</string>
    <string name="text_will_display_here">Text will display here</string>
    <string name="the_bookstore_contains">The BookStore contains</string>
    <string name="items">items.</string>
    <string name="enter_increase_in_qty">Enter Increase in Qty</string>
    <string name="decrease_quantity_by">Decrease Quantity by 1</string>
    <string name="increase_quantity_by">Increase Quantity by 1</string>
    <string name="enter_decrease_in_qty">Enter Decrease in Qty</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="edit_details">Edit Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="call_to_supplier">Call to Supplier</string>
    <string name="delete_record">Delete Record</string>
    <string name="data_inserted">Data Inserted</string>
    <string name="data_not_inserted">Data Not Inserted</string>
    <string name="data_changed_successfully">Data Changed successfully</string>
    <string name="data_not_changed">data not changed</string>
    <string name="no_item_is_entered_yet">No Item Is Entered Yet</string>
    <string name="click_below_button_to_enter_data">Click below button to enter data</string>
    <string name="delete_all_data">Delete All data</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="one">1</string>
    <string name="editor_delete_data_successful">Data deleted </string>
    <string name="editor_delete_data_failed">Error with deleting data</string>
    <string name="delete_dialog_msg">Delete this data?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sale"> Sale </string>
    <string name="missing_name">Product name is missing</string>
    <string name="missing_price">Proper value of Product price is missing</string>
    <string name="missing_quantity">Proper value of Product quantity is missing</string>
    <string name="missing_supplier_name">Product supplier name is missing</string>
    <string name="missing_supplier_phone_number">Proper value of phone number is missing</string>
    <string name="invlid_quantity">Invalid quantity</string>
    <string name="invalid_price">invalid price</string>
    <string name="missing_phone_number">Supplier phone number is missing</string>
</resources>
